--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.7.0",
+    "@types/pg": "^8.15.2",
     "chart.js": "^4.4.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "next": "^14.0.4",
+    "pg": "^8.16.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
